# C_Robotics

./: README.md  fd
catkin_ros_tf_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ros_tf_ws/devel/lib/learning_tf/: turtle_tf_broadcaster
catkin_ros_tf_ws/devel/lib/pkgconfig/: learning_tf.pc
catkin_ros_tf_ws/devel/share/learning_tf/cmake/: learning_tfConfig.cmake
catkin_ros_tf_ws/src/learning_tf/: CMakeLists.txt  start_demo.launch
ros_imu_slam/armesto/armesto/: Licence.txt  README.txt  SLAM_Navigation.ttt
ros_imu_slam/armesto/armesto/groovy_catkin_ws/src/: CMakeLists.txt
ros_imu_slam/armesto/armesto/groovy_catkin_ws/src/armesto/: CMakeLists.txt  package.xml
ros_imu_slam/armesto/armesto/groovy_catkin_ws/src/armesto/launch/: slam_gmapping.launch
ros_imu_slam/armesto/armesto/groovy_catkin_ws/src/armesto/map/: map.pgm
ros_imu_slam/armesto/armesto/groovy_catkin_ws/src/armesto/navigation/: amcl_map_server.launch  base_local_planner_params.launch  base_local_planner_params.yaml  costmap_common_params.yaml
ros_tf_tutorial/src/robot_setup_tf/: package.xml
ros_tf_tutorial/src/robot_setup_tf/src/: tf_broadcaster.cpp  tf_listener.cpp
ros_turtle_learning_tf_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_turtle_learning_tf_ws/devel/lib/learning_tf/: frame_tf_broadcaster  turtle_tf_broadcaster  turtle_tf_listener
ros_turtle_learning_tf_ws/devel/lib/pkgconfig/: learning_tf.pc
ros_turtle_learning_tf_ws/devel/share/learning_tf/cmake/: learning_tfConfig.cmake
ros_turtle_learning_tf_ws/src/learning_tf/: CMakeLists.txt  start_demo.launch
ros_turtle_learning_tf_ws/src/learning_tf/src/: frame_tf_broadcaster.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
